--- a/eforms.css
+++ b/eforms.css
@@ -61,6 +61,7 @@ input[type="email"] {
 input[type="button"] {
   padding: 0 3px 0 3px;
   border-radius: 5px;
+  margin: 0 1em 0 .5em;
 }
 h1 {
   text-align: center;
@@ -72,6 +73,16 @@ label {
   margin-right: 3px;
 }
 
+.firstname {
+  width: 6em;
+}
+.lastname {
+  width: 10em;
+}
+.postcode {
+  text-transform: uppercase;
+  width: 6em;
+}
 .signupform {
   max-width: 60em;
   padding: 1em;
@@ -88,6 +99,12 @@ label {
   margin: 1em;
   border: none;
 }
+
+fieldset.address {
+  display: flex;
+  flex-direction: column;
+  align-items: start
+
 .verify-token {
   width: 1.2em;
   text-align: center;
